# demyst-data

./: README.md  app.py  pyproject.toml  tox.ini
code-kata/tests/: test_parser.py  test_processor.py
data/input/: test_generate_file_success.csv
models/: file.py
src/: utils.py
src/processor/: file.py
tests/: conftest.py  test_parser.py  test_processor.py  test_stress.py  test_utils.py
