[project]
name = "demyst-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demyst-data",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.4",
    "tox>=4.18.1",
]

[tool.uv.sources]
demyst-data = { workspace = true }
