[project]
name = "demyst-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demyst-data",
    "loguru>=0.7.2",
    "pandas>=2.2.2",
    "pydantic>=2.9.1",
    "pytest-cov>=5.0.0",
    "ray>=2.35.0",
    "streamlit>=1.38.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "diff-cover>=9.2.0",
    "faker>=28.4.1",
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240909",
    "pytest>=8.3.2",
    "ruff>=0.6.4",
    "tox>=4.18.1",
]

[tool.uv.sources]
demyst-data = { workspace = true }
